option java_package = "ralph_local_version_protobuffs";
option java_outer_classname = "ObjectContentsProto";

import "delta.proto";

message ObjectContents
{
    message Map
    {
        required Delta.ReferenceType ref_type = 1;
        required string key_type_class_name = 2;
        required string val_type_class_name = 3;
    }
    
    required string uuid = 1;
    required bool atomic = 2;
    optional Delta.ValueType val_type = 3;
    
    // FIXME: this field may be useless.
    optional Delta.ReferenceType ref_type = 4;
    
    optional Map map_type = 5;
}